# GridNM

./: README.md  pyproject.toml
src/gridnm/: gridnm.py
tests/: test_gridnm.py
